# funkwhale-cli

./: .gitignore  Cargo.toml  README.org  todo.org
.circleci/: config.yml
docs/: index.html
src/: config.rs  funkwhale.rs  main.rs  upload.rs
