[package]
name = "funkwhale-cli"
version = "0.6.0"
authors = ["Rodrigo Leite <rodrigolf.dev@gmail.com>"]
edition = "2018"
readme = "README.org"
license = "GPLv2"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.9.15", default-features = false, features = ["rustls-tls"] }
structopt = "0.2.15"
dialoguer = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
spinners = "1.0.0"
chrono = "0.4.6"
indicatif = "0.11.0"
walkdir = "2.2.7"
toml = "0.5.0"
directories = "1.0.2"
